Fix tutorial layout bugs. Implement help button.

--- a/static/css/idea-clusters.css
+++ b/static/css/idea-clusters.css
@@ -103,6 +103,12 @@ input[type=text]:disabled {
     text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
 }
 
+    #problem > span.tutorialHighlightElement {
+        background: #4185F3;
+        border-radius: 5px;
+        padding: 0 5px;
+    }
+
 .logo {
     margin: 0;
     color: white;
@@ -140,8 +146,14 @@ a.logo:focus {
 .topNavbar .btn-primary {
     background-color: rgb(58, 128, 209);
     color: white;
-    margin: 0;
-    padding: 0 10px 0 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-top: 0;
+    margin-right: 0;
+    padding-top: 0;
+    padding-right: 10px;
+    padding-bottom: 0;
+    padding-left: 0;
 }
 
     .topNavbar .btn:hover {
