--- a/static/css/tutorial.css
+++ b/static/css/tutorial.css
@@ -2,8 +2,6 @@
     display: none; 
     z-index: 2000; 
     background: rgba(255,255,255,0.7);
-    -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(20px);
     width: 100%; 
     height: 100%; 
     position: fixed; 
@@ -21,6 +19,10 @@
     box-shadow: 0 0 5px rgba(0,0,0,0.2);
     transition: height 0.5s;
     position: absolute;
+    font-size: 14px !important;
+    color: black !important;
+    text-align: left !important;
+    line-height: 16px !important;
 }
 
 #tutorialPopUp.noHighlight {
@@ -49,4 +51,9 @@
     position: absolute;
     left: 50%;
     transform: translate(-25%,0);
+}
+
+.tutorialHighlightElement {
+    z-index: 9000 !important;
+    position: relative;
 }
